<resources>
    <string name="app_name">Lakeshore Importers</string>
    <string name="api_key">8be4cd7329747d6c206eda522e05e6a6</string>
    <string name="user_id">250</string>
    <string name="home">Home</string>
    <string name="buy_now">Buy Now</string>
    <string name="buy_status">Buy Status</string>
    <string name="extras">Extras</string>
    <string name="bin_requests">Bin Requests</string>
    <string name="about_us">FAQ</string>
    <string name="how_to">How To</string>
    <string name="warrenty_claim">Warranty Claim</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="logout">Logout</string>
    <string name="version">Version 1.0.1</string>
    <string name="dontHaveAccunt">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="action_settings">Settings</string>
    <string name="product_detail">Product Detail</string>
    <string name="about_us_note">We are Lakeshore Importers, a small but motivated company specializing in importing wholesale items for everyone!  We believe passionately in great bargains and excellent customer service, which is why we are committed to giving you the best of both.   If you\'re looking for something new, you\'re in the right place. We strive to be industrious and innovative, offering our customers something they want, putting their desires at the top of our priority list.   Lakeshore Importers started in September of 2016, as a coop buying group, and we grew so large that we needed a new way to combine everyones orders, therefore, we created a website. This website works the same as any usually Facebook coop group. The more orders we get, the cheaper the pricing is for everyone! We were the first online e-commerce coop buying group in Canada (and everyone else followed behind us) .</string>
    <string name="q_n_a"><![CDATA[- Q & A -]]></string>
    <string name="profile">Profile</string>
    <string name="my_cart">My Cart</string>
    <string name="faceboo_buys">Facebook Buys</string>
    <string name="jakes_buys">Jakes Buys</string>
    <string name="case_buys">Jakes Buys</string>
    <string name="past_buys">Past Buys</string>
    <string name="extra_extra">Extra Extra</string>
    <string name="warranty_claim_info">Most products include a 30 day manufacture defect warranty. To read more about our refund and
warranty policies, please visit the policy page.</string>
    <string name="order_number">Please provide the order number (OS1234).*</string>
    <string name="order_description">Exact item name with complete description, sizing, colour ext.*</string>
    <string name="order_defect">Please describe the defects in detail.*</string>
    <string name="recommendations">Please provide your recommendation for a resolution.</string>
    <string name="wc_cb1">Providing false information such as requesting a warranty replacement on items not sold to you directly by Lakeshore Importers will be reported to the RCMP as Small Business Warranty or Refund Fraud. I agree that these items were purchased through Lakeshore Importers. Items not purchased through Lakeshore Importers will have their request refused, account banned, and I agree that my information will be shared to the RCMP for further investigation.</string>
    <string name="wc_cb2">I understand that not all requests are accepted and the outcome will be directly determined by the manufacture or supplier.</string>
    <string name="wc_cb3">I understand that only one warranty request can be made per item. If a second warranty request is made for the same item, the request will be automatically refused.</string>
    <string name="wc_cb4">I understand that warranty requests can only be made within the 30 day period from when the item was received by the Chestermere Host, if not my request will be automatically denied.</string>
    <string name="wc_cb5">Yes, the Lakeshore Staff did approve me for a special warranty or replacement request.</string>
    <string name="wc_cb6">No, the Lakeshore Staff did not approve me for a special warranty or replacement case, rather I am putting one in for myself for investigation.</string>
    <string name="item_youre_picking">Describe the items you are picking up</string>
    <string name="date_pick">Date of Pickup</string>
    <string name="cb_form_1">I understand that I will not receive an email once the items are in the bin. I will come the day chosen.</string>
    <string name="i_understand_n_agree">I understand, and agree</string>
    <string name="cb_form_2">I have 72 hours to pickup from the date chosen under Date of Pickup. If not, the item will be abandoned.</string>
    <string name="cb_form_3">Host\'s do not provide same day pickup, I have given at least a 24 hour notice.</string>
    <string name="cb_form_4">If your order has gone missing, Lakeshore Importers and staff will not be liable. Please pickup as early as you can the day chosen under Date of Pickup.</string>
    <string name="cb_form_info">A copy of your responses will be emailed to the address you provided.</string>
    <string name="i_understand_refund">I agree to the Privacy Policy, and Refund Policy.</string>
    <string name="i_understand_importer">I agree to Lakeshore Importers Liability Policy that states no staff members have any responsibility for any damages, injuries, economic losses, social distress, death, or misuse of any of our products.</string>
    <string name="faq_q1"><b>Q1 - What is Lakeshore Importers?</b></string>
    <string name="faq_a1">Lakeshore Importers is a wholesale company that offers a variety of items to thousands of customers across Canada and the United States for at-cost pricing.</string>
    <string name="faq_q2"><b>Q2 – How does the pricing work?</b></string>
    <string name="faq_a2">In order for Lakeshore Importers to get low pricing, we are required to order in bulk. Each buy quantity is based off of the previous buy, which allows us to estimate the pricing for that particular item. The pricing posted includes the group fees, customs duties, custom taxes and any additional charges the banks may charge for USD and CAD exchange rates.\n\nLakeshore Importers can charge a maximum of $5.00 per item, above the at-cost-price, and a minimum price of $1.00. This allows us to cover the day to day expenses of running a business.</string>
    <string name="faq_q3"><b>Q3 – How do I purchase?</b></string>
    <string name="faq_a3">In order to get onto the buy, you have one week to purchase the items you would like. You will be required to purchase on www.lakeshoreimporters.com, add the items you would like to your cart, and checkout. All buys open Sunday, and close Friday at 8:00pm. Saturday will be used as a buffer; this will allow us to advertise items in order for us to reach the minimum purchase quantity.</string>
    <string name="faq_q4"><b>Q4 – What is a host location?</b></string>
    <string name="faq_a4">A host location is the city or area you would like to pickup your items. These host locations allow you to pickup in your local area, instead of driving long distances or pay for expensive shipping. When the item arrives, you will be tagged on our Facebook Group, Lakeshore Importers – Wholesale Pricing For Everyone!, when the items arrive to the host location. Delivery times will differ from each host, and may take a few weeks for the items to be delivered.</string>
    <string name="faq_q5"><b>Q5 – Can we ship directly to you?</b></string>
    <string name="faq_a5">Yes, we can ship your items directly to you anywhere in Canada. You are responsible to pay for any shipping charges associated with the order. Please pay for shipping under the shipping tab.</string>
    <string name="faq_q6"><b>Q6 – How long does it take for my items to arrive?</b></string>
    <string name="faq_a6">Lakeshore importers, and staff, are committed in fast and safe delivery of your items. Most items are shipped from the supplier within 1 week from buy close date. Dependent on the delivery courier, FedEx and DHL both offer 4-day deliveries, while Canada Post is usually 2-6 weeks.  Please track the status of the buys here.</string>
    <string name="faq_q7"><b>Q7 – How long does it take for my items to be sorted?</b></string>
    <string name="faq_a7">Items are sorted within 24 hours from arrival of the bulk order. You can check the status of the buys here.</string>
    <string name="faq_q8"><b>Q8 – How long do I have to pickup my order from the Host?</b></string>
    <string name="faq_a8">Respectively, clients should pickup immediately when buys have arrived. Under certain circumstances, when absolutely no communication can be made with the buyer, we are required to abandon and resell their order without refund. Otherwise, all orders will be kept safe with the host unless the host returns the items to the Chestermere location due to a non-pickup.</string>
    <string name="faq_q9"><b>Q9 – What extra costs will I encounter while participating in a wholesale buy?</b></string>
    <string name="faq_a9">You will not encounter any extra costs when you purchase off of www.lakeshoreimporters.com. When you purchase items, they will include the product cost, group fee, and duties and taxes. There is a chance of additional costs, but unlikely, but in the case that there is, the client must pay this cost upon pickup. The additional cost will be split amongst all buyers.</string>
    <string name="faq_q10"><b>Q10 – How do I get my items placed in the pickup bin?</b></string>
    <string name="faq_a10">In order to have your items placed in the bin, please fill out the form here. We are unable to process same day pickups.\n\nLakeshore Importers and any staff members involved have absolutely no responsibility for any damages, injuries, economic losses, social distress, death, misuse, theft, or lost items during the use of the Bin System, and or the use of the product. We are unable to guarantee the security of everyone’s order when using the Bin System. If you are not comfortable, and do not want to risk having your items lost or stolen, please use our designated pickup times.\n\nIf items are lost, or stolen, and a customer demands a refund, the refund will be kindly declined. If and when a chargeback occurs, a $50.00 plus GST penalty fee will be charged to the customer plus the cost of the stolen, or lost item. The total amount will be required to be paid in full, by cash, cheque, or e-transfer, within 1 week of invoice date.</string>
    <string name="terms_n_conditions">I understand the terms and conditions.</string>
    <string name="policies">Policies</string>
    <string name="rateus">Rate Us</string>
    <string name="feedback">FeedBack</string>
    <string name="seasonal">Seasonal Buy</string>
    <string name="electronics">Electronics</string>
    <string name="outdoor">Outdoor</string>
    <string name="jewelry">Jewelry</string>
    <string name="homeKitchen">Home Kitchen</string>
    <string name="clothing">Clothing</string>
    <string name="beauty">Beauty</string>
    <string name="toys">Toys Games</string>
    <string name="weekly">Weekly Deals</string>
    <string name="alert">Notifications</string>
    <string name="category">Categories</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="retrun_refund"><![CDATA[Returns & Refunds Policy]]></string>
    <string name="sc_note">No History Yet\nGrab it now, tomorrow, it might be gone forever.</string>
    <string name="estimated_delivery_note">All items are expected to arrive on or before June 30th 2019. Due to limited circumstances, certain items may be delayed due to defects, weather, shipping, or unexpected problems.</string>
    <string name="case_extravaganza">Special Buy</string>
</resources>