<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_black_24dp"/>
    <item
        android:id="@+id/nav_buy_now"
        android:title="@string/faceboo_buys"
        android:icon="@drawable/ic_facebook"/>
 <!--   <item
        android:id="@+id/nav_jake_spice"
        android:title="@string/jake_spice" />-->
    <item
        android:id="@+id/nav_case_extravaganza"
        android:title="@string/case_extravaganza"
        android:icon="@drawable/ic_folder_special"/>
    <item
        android:id="@+id/nav_extras"
        android:title="@string/beauty"
        android:icon="@drawable/ic_extrabuy"/>
    <group android:id="@+id/id1">

<!--
        <item
            android:id="@+id/nav_buy_status"
            android:title="@string/past_buys" />-->

        <item
            android:id="@+id/nav_bin_requests"
            android:title="@string/bin_requests"
            android:icon="@drawable/ic_bin_request"/>
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us"
            android:icon="@drawable/ic_question_answer"/>

        <item
            android:id="@+id/nav_warranty_claim"
            android:title="@string/warrenty_claim"
            android:icon="@drawable/ic_warranty"/>
    </group>

    <group android:id="@+id/id3">

        <item
            android:id="@+id/nav_policies"
            android:title="@string/policies"
            android:icon="@drawable/ic_policy"/>
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_email_black_24dp"/>
        <item
            android:id="@+id/nav_rate_us"
            android:title="@string/rateus"
            android:icon="@drawable/ic_001_rating"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>

    </group>

</menu>
